Modifiqué cosas del CSS / SCSS

--- a/scss/_art-section.scss
+++ b/scss/_art-section.scss
@@ -1,4 +1,12 @@
-#art {
-  background-color: $color-black;
+.art {
+  background-color: $color-grey;
+  &__card {
+    max-width: 480px;
+  }
+
+  &__card--active {
+    padding-top: 8rem;
+    max-width: 480px;
+  }
 }
 
