--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -7,8 +7,20 @@
     margin-top: 5vh;
   }
   .file__title {
-    margin-top: 5vh;
+    margin-top: 5vh;    
   }
+  // .main__title:before {
+  //   background: $color-white;
+  //   color: $color-grey;
+  //   content: 'Descubrí el arte.';
+  //   overflow: hidden;
+  //   position: absolute;  
+  //   top: 140px;  
+  //   left: 0;
+  //   -webkit-clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);  
+  //   clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);
+  //   animation: slide 4s 1s linear infinite; 
+  // }
 }
 
 @media screen and (max-width: 1200px) {
@@ -16,4 +28,16 @@
     padding-top: 15vh;
     font-size: map-get($font-sizes, h2);
     }
+    // .main__title:before {
+    //   background: $color-white;
+    //   color: $color-grey;
+    //   content: 'Descubrí el arte.';
+    //   overflow: hidden;
+    //   position: absolute;  
+    //   top: 140px;  
+    //   left: 0;
+    //   -webkit-clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);  
+    //   clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);
+    //   animation: slide 4s 1s linear infinite; 
+    // }
 }
