--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import 'general';
+@import 'text';
 @import 'header';
+@import 'artists';
 @import 'main-section';
 @import 'about-section';
 @import 'art-section';
