--- a/scss/_cta-section.scss
+++ b/scss/_cta-section.scss
@@ -1,5 +1,5 @@
 #cta {
-  background: $color-grey;
+  background: $color-main;
   padding: 15vh 0;
   color:$color-white;  
   .cta-btn {
@@ -7,13 +7,13 @@
     transition: 0.5s;
     font-weight: map-get($font-weights, bold);
     margin: 10px;
-    border: 2px solid $color-white;
+    border: 1px solid $color-white;
     color:$color-white;
     &:hover {    
-        background: $color-white;
-        border: 2px solid $color-white;
-        color: $color-grey;
-        text-decoration: none;
+      background: $color-main;
+      border: 1px solid $color-green;
+      color: $color-green;
+      text-decoration: none;
     }
   }
 }
