--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,27 +1,10 @@
-$color-grey: #212b35;
-$color-black: #02777e;
+$color-main: #212b35;
+$color-green: #07939a;
+$color-orange: #cb3e0d;
 $color-white: #f1f1f1;
-$color-green: #028C94;
-$color-light-green:#12c9d6;
-$overlay: rgba(0, 9, 0, 0.9);
-$primary-font: 'DM Serif Display', serif;
-$secondary-font: 'Red Hat Display', sans-serif;
-$font-weights: (
-  "regular": 300,
-  "bold": 700
-);
-$font-sizes: (
-  "h1": 5.9rem,
-  "h2": 4.5rem,
-  "h3": 2rem,
-  "p": 1.2rem
-);
-
-$line-height: 60px;
-$line-height-abs: -60px;
-
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
+$overlay: rgba(33,43,53,0.90);
+$line-height: 3rem;
+$line-height-abs: -3rem;
 
 * {
   box-sizing: border-box;
@@ -31,89 +14,19 @@ $line-height-abs: -60px;
   list-style: none;
 }
 
-a {
-  display: inline-block;
-  position: relative;
-}
-
-a:hover {
-  text-decoration: none;
-  list-style: none;
-}
-
-/*effect-box*/
-a.effect-box:after,
-a.effect-box:before {
-	content: '';
-  position: absolute;
-  left: 0;
-  display: inline-block;
-  height: 2em;
-  width: 100%;
-  margin-top: -5px;
-  opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;	
-}
-
-a.effect-box:before {
-  border-left: 1px solid;
-  border-right: 1px solid;
-  -webkit-transform: scale(1,0);
-	transform: scale(1,0);
-}
-
-a.effect-box:after {
-  border-bottom: 1px solid;
-  border-top: 1px solid;
-  -webkit-transform: scale(0,1);
-	transform: scale(0,1);
-}
-
-a.effect-box:hover:after,
-a.effect-box:hover:before {
-  opacity: 1;
-	-webkit-transform: scale(1);
-	transform: scale(1);
-}
-
-h1, h2, h3, h4 {
-  font-family: $primary-font;
-}
-
-h1 {
-  font-size: map-get($font-sizes, h1);
-  line-height: 6rem;
-}
-
-h2 {
-  font-size: map-get($font-sizes, h2);
-}
-
-h3 {
-  font-size: map-get($font-sizes, h3);
-}
-
-p {
-  font-family: $secondary-font;
-  font-weight: map-get($font-weights, regular);
-  font-size: map-get($font-sizes, p);
-  line-height: 2em;
-}
-
 .bg-darker {
-  background-color: $color-grey;
+	background-color: $color-main;
+	padding: 1vh 5vh;
 }
 
 section {
   padding: 15vh 0;
-  overflow: hidden;
 }
 
 #myBtn {
   display: none;
   position: fixed;
-  background-color: $color-grey;
+  background-color: $color-main;
   color: $color-white;
   border: none;
   outline: none;
@@ -128,7 +41,7 @@ section {
 	width: 1px;
 	height: $line-height;
 	position: absolute;
-	bottom: 20px;
+	bottom: 3vh;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
