--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,14 +1,14 @@
 nav img {
-    width: 6vh;
+    width: 45px;
   }
-  
-  ul li a {
+    ul li a {
     font-family: $primary-font;
     color:$color-white;
     font-weight: 500;
     font-size: 1.5rem;
     &:hover {
-      color: $color-light-green !important;
+      color: $color-green !important;
       transition: 0.5s !important;
   }
 }
+
