--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -1,26 +1,62 @@
+@media screen and (min-width: 640px) {
+  .artists__wrap .gridyhe-2 {
+    height: 320px;
+  }
+  .artists__wrap {
+    width: 100%;
+  }
+  .artists__wrap .gridy-1 {
+    width: 50%;
+  }
+  .artists__wrap .gridy-2 {
+    width: 50%;
+  }
+  .artists__wrap .gridy-3 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  li {
+    padding: 0 0 2vh 0;
+  }
+}
+
 @media screen and (max-width: 992px) {
+  .main__title {
+    padding-top: 20vh;
+  }
   .flipster {
     padding-top: 5vh;
     padding-bottom: 15vh;
   }
-  .art__card {
-    margin-top: 5vh;
-  }
   .file__title {
     margin-top: 5vh;    
   }
-  // .main__title:before {
-  //   background: $color-white;
-  //   color: $color-grey;
-  //   content: 'Descubrí el arte.';
-  //   overflow: hidden;
-  //   position: absolute;  
-  //   top: 140px;  
-  //   left: 0;
-  //   -webkit-clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);  
-  //   clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);
-  //   animation: slide 4s 1s linear infinite; 
-  // }
+  .art__card {
+    margin-top: 5vh;
+    max-width: 100%;    
+  }  
+  .art__card--active {
+    padding-top: 5vh;
+    max-width: 100%;
+  }
+  .effect-underline {
+    display: inline-block !important;
+  }
+  .navbar-collapse {
+    text-align: center !important;
+  }  
+  .navbar-toggler {
+    border: none;
+  }
+  button:focus {
+    border: none;
+    outline: none;
+  }
+  .bg-darker {
+    padding: 1vh 2vh;
+  } 
 }
 
 @media screen and (max-width: 1200px) {
@@ -28,16 +64,19 @@
     padding-top: 15vh;
     font-size: map-get($font-sizes, h2);
     }
-    // .main__title:before {
-    //   background: $color-white;
-    //   color: $color-grey;
-    //   content: 'Descubrí el arte.';
-    //   overflow: hidden;
-    //   position: absolute;  
-    //   top: 140px;  
-    //   left: 0;
-    //   -webkit-clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);  
-    //   clip-path: polygon(0% 0% , 30% 0%, 30% 100%, 0% 100%);
-    //   animation: slide 4s 1s linear infinite; 
-    // }
+}
+
+@media screen and (min-width: 1024px) {
+  .artists__wrap .gridy-1 {
+    width: 33.3%;
+  }
+  .artists__wrap .gridy-2 {
+    width: 66.6%;
+  }
+  .artists__wrap .gridy-3 {
+    width: 100%;
+  }
+  .artists__wrap .gridyhe-2 {
+    height: 640px;
+  }
 }
