--- a/views/diego-velazquez.html
+++ b/views/diego-velazquez.html
@@ -2,24 +2,24 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Alexandre Cabanel - Galería de Arte</title>
+    <title>Diego Velázquez - Galería de Arte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Galería de arte virtual, pensada para acercarte las obras más emblemáticas de los artistas que hicieron historia.">
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="dist/css/jquery.flipster.css">
-    <link rel="stylesheet" type="text/css" href="dist/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../../dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../dist/css/jquery.flipster.css">
+    <link rel="stylesheet" type="text/css" href="../../dist/css/main.css">
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn"><i class="fas fa-arrow-up p-3"></i></button>
-    <header>      
+    <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-darker">
-          <div class="container">
-            <a class="navbar-brand" href="index.html">
-              <img src="img/logo.png" alt="logo">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../img/logo.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -27,34 +27,32 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
+                  <a class="nav-link effect-underline" href="artistas.html">Artistas</a>
                 </li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li> -->
+                <li class="nav-item active">
+                  <a class="nav-link effect-underline" href="contacto.html">Contacto</a>
+                </li>
               </ul>
             </div>
           </div>
         </nav>
     </header>    
-    <section id="file" class="section two-painting d-flex file">
+    <section id="file" class="section four-painting d-flex file">
         <div class="container">
-          <div class="row align-items-center file__content">
-            <div class="col-lg-6 col-md-12 wow animate__animated animate__fadeInLeft animate__slower">
-              <img src="img/artists/alexandre-cabanel.jpg" alt="Alexandre Cabanel">
+          <div class="row align-items-center file__content d-flex justify-content-between">
+            <div class="col-lg-5 col-md-12 wow animate__animated animate__fadeInLeft animate__slower">
+              <img src="../img/artists/diegovelazquez.jpg" alt="Diego Velázquez">
             </div>
             <div class="col-lg-6 col-md-12 align-self-center">
               <h1 class="file__title">
-                Alexandre Cabanel
+                Diego Velázquez
               </h1>
               <p class="file__paragraph">
-                Alexandre Cabanel (Montpellier 28 de septiembre de 1823 - París 23 de enero de 1889) fue un pintor francés. Alumno de François-Édouard Picot en la École des Beaux-Arts, ganó una segunda medalla en el Salón de Roma en 1845 y residió durante cinco años en la Villa Médicis. Pintor de historia, de género y retratista, su obra evolucionó con los años hacia temas románticos, tales como Albaydé, inspirado en un poema de Orientales de Victor Hugo. Su obra fue especialmente conocida y reclamada por los coleccionistas internacionales y por las instituciones, y fue uno de los artistas preferidos de los emperadores Napoleón III y Eugenia de Montijo. Artista contrario al Naturalismo y al Impresionismo, y en particular enemigo de Édouard Manet, fue criticado a su vez por Émile Zola y los naturalistas, así como por todos aquellos que defendían la emergencia de un arte menos galante y más social y exigente.
-              </p>
+                Diego Rodríguez de Silva y Velázquez (Sevilla, bautizado el 6 de junio de 15991​-Madrid, 6 de agosto de 1660), conocido como Diego Velázquez, 
+                fue un pintor barroco español considerado uno de los máximos exponentes de la pintura española y maestro de la pintura universal. 
+                Pasó sus primeros años en Sevilla, donde desarrolló un estilo naturalista de iluminación tenebrista, por influencia de Caravaggio
+                y sus seguidores. A los 24 años se trasladó a Madrid, donde fue nombrado pintor del rey Felipe IV y cuatro años después fue ascendido
+                a pintor de cámara, el cargo más importante entre los pintores de la corte.</p>
             </div>
           </div>
         </div> 
@@ -89,12 +87,12 @@
       </div>
     </footer>
     <!-- Bootstrap -->
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- Main --> 
-    <script src="dist/js/main.js"></script>    
+    <script src="../../dist/js/main.js"></script>    
     <!-- Flipster -->
-    <script src="dist/js/jquery.flipster.min.js"></script>
+    <script src="../../dist/js/jquery.flipster.min.js"></script>
     <!-- Fontawesome -->
-    <script src="https://kit.fontawesome.com/ae54c90eda.js" crossorigin="anonymous"></script>    
+    <script src="https://kit.fontawesome.com/ae54c90eda.js" crossorigin="anonymous"></script>
   </body>
 </html>
