--- a/scss/main.css
+++ b/scss/main.css
@@ -16,7 +16,6 @@
 
 section {
   padding: 15vh 0;
-  overflow: hidden;
 }
 
 #myBtn {
@@ -80,6 +79,10 @@ section {
   }
 }
 
+li {
+  padding: 0 0 0 4vh;
+}
+
 a {
   display: inline-block;
   position: relative;
@@ -139,7 +142,7 @@ p {
 }
 
 nav img {
-  width: 6vh;
+  width: 45px;
 }
 
 ul li a {
@@ -155,55 +158,86 @@ ul li a:hover {
   transition: 0.5s !important;
 }
 
-.alexandre-cabanel-artists {
-  background: url("../../img/bk/alexandre-cabanel.jpg") center 15% no-repeat fixed;
+.alexandrecabanel-artistas {
+  background: url("../../img/artists/alexandrecabanel.jpg") center 25% no-repeat;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
 }
 
-.eight-artists {
-  background: url("../../img/bk/eight.jpg") center 15% no-repeat fixed;
+.diegovelazquez-artistas {
+  background: url("../../img/artists/diegovelazquez.jpg") center 25% no-repeat;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
 }
 
-.nine-artists {
-  background: url("../../img/bk/nine.jpg") center 15% no-repeat fixed;
+.johannesvermeer-artistas {
+  background: url("../../img/artists/johannesvermeer.jpg") center 25% no-repeat;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
 }
 
-.ten-artists {
-  background: url("../../img/bk/ten.jpg") center 15% no-repeat fixed;
+.johncollier-artistas {
+  background: url("../../img/artists/johncollier.jpg") center 25% no-repeat;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
 }
 
-.eleven-artists {
-  background: url("../../img/bk/eleven.jpg") center 15% no-repeat fixed;
+.johnsingersargent-artistas {
+  background: url("../../img/artists/johnsingersargent.jpg") center 25% no-repeat;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
 }
 
-.twelve-artists {
-  background: url("../../img/bk/twelve.jpg") center 15% no-repeat fixed;
+.rembrandt-artistas {
+  background: url("../../img/artists/rembrandt.jpg") center 25% no-repeat;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
 }
 
-#artists {
-  padding-top: 9vh !important;
-  padding-bottom: 0 !important;
+.artists {
+  padding-top: 8vh;
+  padding-bottom: 0;
 }
 
 .artists__wrap div[class*=gridy] {
-  background: #eee;
-  -webkit-box-shadow: inset 0 0 0 1px #ddd;
-          box-shadow: inset 0 0 0 1px #ddd;
-  padding: 15px;
   float: left;
   position: relative;
-}
-
-.artists__wrap .gridy-1,
-.artists__wrap .gridy-2,
-.artists__wrap .gridy-3 {
-  width: 320px;
-  overflow: hidden;
 }
 
 .artists__wrap .gridy-1 {
@@ -226,56 +260,7 @@ ul li a:hover {
   height: 320px;
 }
 
-@media screen and (min-width: 640px) {
-  .artists__wrap .gridyhe-2 {
-    height: 320px;
-  }
-  .artists__wrap {
-    width: 100%;
-  }
-  .artists__wrap .gridy-1 {
-    width: 50%;
-  }
-  .artists__wrap .gridy-2 {
-    width: 50%;
-  }
-  .artists__wrap .gridy-3 {
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .artists__wrap .gridy-1 {
-    width: 33.3%;
-  }
-  .artists__wrap .gridy-2 {
-    width: 66.6%;
-  }
-  .artists__wrap .gridy-3 {
-    width: 100%;
-  }
-  .artists__wrap .gridyhe-2 {
-    height: 640px;
-  }
-}
-
-/*styling*/
-.artists__wrap .gridimg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: hidden;
-  background-position: center center;
-  background-size: cover;
-}
-
-.artists__wrap .gridimg img {
-  width: 100%;
-}
-
-.artists__wrap .gridinfo {
+.artist__wrap-title {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -283,108 +268,29 @@ ul li a:hover {
   left: 0;
   background: rgba(0, 0, 0, 0.4);
   text-align: center;
-  -webkit-transition: all 0.8s;
-  transition: all 0.8s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-.artists__wrap .gridinfo h3 {
+.artist__wrap-title h3 {
   font-size: 24px;
-  color: #fff;
-  font-weight: bold;
-  text-transform: uppercase;
+  color: #f1f1f1;
   position: relative;
-}
-
-.artists__wrap .gridinfo .gridmeta {
-  -webkit-transition-delay: 0.25s;
-          transition-delay: 0.25s;
-}
-
-.artists__wrap .gridinfo .gridmeta p {
-  display: inline-block;
-  font-size: 13px;
-  color: #fff;
-  margin-bottom: 15px;
-}
-
-.artists__wrap .gridinfo .gridmeta p i {
-  margin-right: 5px;
-}
-
-.artists__wrap .gridinfo .gridmeta p.gridwho {
-  margin-left: 25px;
-}
-
-.artists__wrap .gridinfo p.gridexerpt {
-  width: 60%;
-  margin: 0 auto;
-  line-height: 22px;
-  margin-bottom: 25px;
-  color: #fff;
-  -webkit-transition-delay: 0.5s;
-          transition-delay: 0.5s;
-}
-
-.artists__wrap .gridinfo * {
-  opacity: 0;
-  -webkit-transition: all 0.8s;
-  transition: all 0.8s;
-}
-
-.artists__wrap .gridinfo h3 {
   opacity: 0;
 }
 
-.artists__wrap .gridinfo .grid-btn {
-  color: #fff;
-  text-decoration: none;
-  margin: 0 auto;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
-  border-radius: 25px;
-  border: 1px solid #fff;
-  display: block;
-  overflow: hidden;
-}
-
-.artists__wrap .gridinfo .grid-btn:hover {
-  width: 75px;
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.artists__wrap .gridinfo .grid-btn span {
+.artist__wrap-title * {
   opacity: 0;
-  display: none;
-  -webkit-transition: opacity 0.8s;
-  transition: opacity 0.8s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-.artists__wrap .gridinfo .grid-btn:hover span {
-  opacity: 1;
-  display: inline;
-}
-
-.artists__wrap .gridinfo .grid-btn:hover i {
-  opacity: 0;
-  display: none;
-}
-
-.artists__wrap .gridinfo:hover * {
-  opacity: 0.7;
-}
-
-.artists__wrap .gridinfo:hover p {
+.artist__wrap-title:hover h3 {
   opacity: 1;
 }
 
-.artists__wrap .gridinfo:hover {
-  background: rgba(0, 9, 0, 0.9);
-}
-
-.artists__wrap .gridinfo:hover h3 {
-  margin-top: 15vh;
-  opacity: 1;
+.artist__wrap-title:hover {
+  background: rgba(33, 43, 53, 0.9);
 }
 
 .main {
@@ -394,7 +300,7 @@ ul li a:hover {
 }
 
 #about {
-  background: url("../../img/paintings/la-dama-de-shalott.jpg") rgba(0, 9, 0, 0.9) center 35% no-repeat;
+  background: url("../../img/paintings/la-dama-de-shalott.jpg") rgba(33, 43, 53, 0.9) center 35% no-repeat;
   background-size: cover;
 }
 
@@ -422,6 +328,10 @@ ul li a:hover {
 .art__card--active {
   padding-top: 8rem;
   max-width: 480px;
+}
+
+.art__card-img {
+  width: 100%;
 }
 
 .art__card--active:hover img {
@@ -464,12 +374,13 @@ ul li a:hover {
 }
 
 #quote {
-  background: url("../../img/paintings/angel-caido.jpg") rgba(0, 9, 0, 0.9) center 35% no-repeat;
+  background: url("../../img/paintings/angel-caido.jpg") rgba(33, 43, 53, 0.9) center 35% no-repeat;
   background-size: cover;
+  min-height: 50vh;
 }
 
 #quote .quote-text {
-  background: rgba(0, 9, 0, 0.9);
+  background: rgba(33, 43, 53, 0.9);
 }
 
 .one-painting {
@@ -569,6 +480,30 @@ ul li a:hover {
   transition: 0.5s;
 }
 
+@media screen and (min-width: 640px) {
+  .artists__wrap .gridyhe-2 {
+    height: 320px;
+  }
+  .artists__wrap {
+    width: 100%;
+  }
+  .artists__wrap .gridy-1 {
+    width: 50%;
+  }
+  .artists__wrap .gridy-2 {
+    width: 50%;
+  }
+  .artists__wrap .gridy-3 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  li {
+    padding: 0 0 2vh 0;
+  }
+}
+
 @media screen and (max-width: 992px) {
   .main__title {
     padding-top: 20vh;
@@ -588,12 +523,43 @@ ul li a:hover {
     padding-top: 5vh;
     max-width: 100%;
   }
+  .effect-underline {
+    display: inline-block !important;
+  }
+  .navbar-collapse {
+    text-align: center !important;
+  }
+  .navbar-toggler {
+    border: none;
+  }
+  button:focus {
+    border: none;
+    outline: none;
+  }
+  .bg-darker {
+    padding: 1vh 2vh;
+  }
 }
 
 @media screen and (max-width: 1200px) {
   .main__title {
     padding-top: 15vh;
     font-size: 4.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .artists__wrap .gridy-1 {
+    width: 33.3%;
+  }
+  .artists__wrap .gridy-2 {
+    width: 66.6%;
+  }
+  .artists__wrap .gridy-3 {
+    width: 100%;
+  }
+  .artists__wrap .gridyhe-2 {
+    height: 640px;
   }
 }
 /*# sourceMappingURL=main.css.map */
