--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -11,7 +11,8 @@ $line-height-abs: -3rem;
   margin: 0;
   padding: 0;
   text-decoration: none;
-  list-style: none;
+	list-style: none;
+	cursor: none;
 }
 
 .bg-darker {
@@ -21,6 +22,7 @@ $line-height-abs: -3rem;
 
 section {
   padding: 15vh 0;
+  overflow: hidden;
 }
 
 #myBtn {
@@ -30,7 +32,7 @@ section {
   color: $color-white;
   border: none;
   outline: none;
-  z-index: 999;
+  z-index: 888;
   bottom: 3%;
   right: 2%;
   border-radius: 4px; 
@@ -58,6 +60,35 @@ section {
 	}
 }
 
+.cursor-dot,
+.cursor-dot-outline {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.3s ease-in-out,
+              transform 0.3s ease-in-out;
+  z-index:999;
+}
+
+.cursor-dot {
+  $size: 1rem;
+  width: $size;
+  height: $size;
+  background-color: $color-green;
+    
+}
+
+.cursor-dot-outline {
+  $size: 2rem;
+  width: $size;
+  height: $size;
+  background-color: rgba($color-green, 0.5);
+}
+
 @keyframes scrolldown {
 	0%{
 		background-position: 0 $line-height-abs;
@@ -69,3 +100,4 @@ section {
 		background-position: 0 $line-height;
 	}
 }
+
