--- a/views/artistas.html
+++ b/views/artistas.html
@@ -16,9 +16,11 @@
     <link rel="stylesheet" type="text/css" href="../../dist/css/main.css">
   </head>
   <body>
+    <div class="cursor-dot-outline"></div>
+    <div class="cursor-dot"></div>
     <button onclick="topFunction()" id="myBtn"><i class="fas fa-arrow-up p-3"></i></button>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-darker">
+        <nav class="navbar navbar-expand-md navbar-dark bg-darker">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
               <img src="../img/logo.png" alt="logo">
