--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,5 +1,6 @@
 .contact {
   background-color: $color-main;
+  min-height: 100vh;
   input, textarea {
     background-color: $color-main !important;
     color: $color-white;
