--- a/views/rembrandt-harmenszoon.html
+++ b/views/rembrandt-harmenszoon.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Alexia Glibota">
     <meta name="description" content="Galería de arte virtual, pensada para acercarte las obras más emblemáticas de los artistas que hicieron historia.">
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" type="text/css" href="../dist/css/bootstrap.css">
@@ -23,7 +22,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-darker">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-              <img src="../img/logo.png" alt="logo">
+              <img src="../img/logo-rezise.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -90,12 +89,14 @@
         </div>
       </div>
     </footer>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Bootstrap -->
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../dist/js/bootstrap.min.js"></script>
     <!-- Main --> 
-    <script src="../../dist/js/main.js"></script>    
+    <script src="../dist/js/main.js"></script>    
     <!-- Flipster -->
-    <script src="../../dist/js/jquery.flipster.min.js"></script>
+    <script src="../dist/js/jquery.flipster.min.js"></script>
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/ae54c90eda.js" crossorigin="anonymous"></script>
   </body>
