--- a/views/404.html
+++ b/views/404.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Contacto - Galería de Arte</title>
+    <title>Gracias - Galería de Arte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Alexia Glibota">
@@ -42,41 +42,13 @@
     </header>
     <section id="contact" class="d-flex align-items-center contact section">
       <div class="container">
-        <div class="contact__content">
-          <h2 class="contact__title text-light text-center">Envianos un mensaje con tus recomendaciones</h2>
+        <div class="row justify-content-center align-items-center">
+          <img src="../img/404.jpg" alt="Página no encontrada">
         </div>
-        <div class="row">
-          <div class="col-lg-5 align-self-center">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-          </div>
-          <div class="col-lg-7 mt-5 mt-lg-0">
-            <form action="gracias.html" method="post" role="form">
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="name" class="text-white">Nombre</label>
-                  <input type="text" name="name" class="form-control text-white" id="name" data-rule="minlen:4" data-msg="Error." />
-                  <div class="validate"></div>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="email" class="text-white">Email</label>
-                  <input type="email" class="form-control text-white" name="email" id="email" data-rule="email" data-msg="El email es incorrecto." />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="subject" class="text-white">Asunto</label>
-                <input type="text" class="form-control text-white" name="subject" id="subject" data-rule="minlen:4" data-msg="Por favor, escribí el asunto." />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <label for="message" class="text-white">Escribí tu mensaje</label>
-                <textarea class="form-control text-white" name="message" rows="10" id="message" data-rule="required" data-msg="Por favor, escribí el mensaje."></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="text-center"><button type="submit" class="p-4">Enviar</button></div>
-            </form>
-          </div>
-        </div>
+        <div class="row justify-content-center align-items-center">
+          <a class="cta-btn p-4 mt-5" href="../index.html">Volver al inicio</a>
+        </div> 
+      </div>
       </div>
     </section>
     <footer class="footer text-white">
