--- a/views/gracias.html
+++ b/views/gracias.html
@@ -40,12 +40,13 @@
           </div>
         </nav>
     </header>
-    <section id="contact" class="contact section">
+    <section id="contact" class="d-flex align-items-center contact section">
       <div class="container">
-        <div class="contact__content">
-          <h2 class="contact__title mb-5 text-white text-center">¡Gracias por contactarte con nosotros!</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+        <div class="row justify-content-center align-items-center">
+          <h2 class="contact__title text-white text-center">¡Gracias por ayudarnos! Trataremos de responderte lo antes posible.</h2>
+          <a class="cta-btn p-4" href="../index.html">Volver al inicio</a>
+        </div>  
+      </div>
       </div>
     </section>
     <footer class="footer text-white">
